Text alignment fix on WonkyContainerText component

--- a/QuickQuiz2/ClientApp/src/components/WonkyShapes/WonkyTexts/WonkyContainerText/wonkycontainertext.module.css
+++ b/QuickQuiz2/ClientApp/src/components/WonkyShapes/WonkyTexts/WonkyContainerText/wonkycontainertext.module.css
@@ -4,9 +4,9 @@
 
 .wonkyContainerTextText {
   position: absolute;
-  top: 20%;
+  top: 0%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -70%);
 
   font-weight: bold;
   color: white;
